# PyWebScrapBook

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGES.md  DEVELOPMENT.md  LICENSE  LICENSE.txt  README.md  publish.cmd  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-lint.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
docker/: .dockerignore  Dockerfile  README.md  build.sh  config.ini  entrypoint.sh  run_wsb.sh
test/: README.md  __init__.py  test_app_actions.py  test_app_config.py  test_app_helpers.py  test_cli.py  test_locales.py  test_scrapbook_book.py  test_scrapbook_cache.py  test_scrapbook_check.py  test_scrapbook_convert_file2wsb.py  test_scrapbook_convert_items.py  test_scrapbook_convert_migrate.py  test_scrapbook_convert_migrate0.py  test_scrapbook_convert_sb2wsb.py  test_scrapbook_convert_wsb2file.py  test_scrapbook_convert_wsb2sb.py  test_scrapbook_host.py  test_scrapbook_importer.py  test_scrapbook_indexer.py  test_server.py  test_util.py  test_util_html.py
test/test_app_actions/.wsb/: config.ini
test/test_app_config/: index.html  index.md
test/test_app_config/subdir/: index.html
test/test_app_helpers/general/.wsb/: config.ini
test/test_app_helpers/get_permission1/.wsb/: config.ini
test/test_app_helpers/get_permission2/.wsb/: config.ini
test/test_app_helpers/get_permission3/.wsb/: config.ini
test/test_app_helpers/get_permission4/.wsb/: config.ini
test/test_config/.wsb/: config.ini
test/test_config_load_constants/: userconfig.ini
test/test_config_load_constants/.wsbdir/: localconfig.ini
test/test_locales/test_special/ar/: messages.py
test/test_locales/test_special/en/: messages.py
test/test_scrapbook_cache/book01/data/: 20200917132306821.htm  20200917155205232.maff
test/test_scrapbook_cache/book01/tree/: meta.js  toc.js
test/test_server/.wsb/: test.key  test.pem
test/test_util/: import_module_file.py
test/test_util/get_charset/: charset1.html  charset3.html  charset4.html
test/test_util/get_html_charset/: charset2.html  charset5.html  charset6.html  charset7.html
test/test_util/get_meta_refresh/: refresh2.html  refresh3.html  refresh4.html  refresh6.html
test/test_util/get_meta_refreshed_file/case01/: index.html
test/test_util/get_meta_refreshed_file/case03/: refresh1.html
test/test_util/get_meta_refreshed_file/case06/: index.html
test/test_util/iter_meta_refresh/: refresh1.html  refresh5.html  refresh6.html
test/test_util/load_html_markups/: sample.html  sample.html.expected
test/test_util/load_html_markups_reserialized/: sample.html.expected  sample.xhtml  sample.xhtml.expected
test/test_util/parse_meta_refresh/: refresh2.html
test/test_util_html/load_html_markups/: sample.expected.html  sample.expected.xhtml
test/test_util_html/load_html_markups_reserialized/: sample.expected.html  sample.expected.xhtml
tests/: README.md  __init__.py  test_app_actions.py  test_app_config.py  test_app_helpers.py  test_cli.py  test_init.py  test_locales.py  test_mimetypes.py  test_scrapbook_book.py  test_scrapbook_cache.py  test_scrapbook_check.py  test_scrapbook_convert_file2wsb.py  test_scrapbook_convert_items.py  test_scrapbook_convert_migrate.py  test_scrapbook_convert_sb2wsb.py  test_scrapbook_convert_wsb2file.py  test_scrapbook_convert_wsb2sb.py  test_scrapbook_exporter.py  test_scrapbook_exporter1.py  test_scrapbook_host.py  test_scrapbook_importer.py  test_scrapbook_importer1.py  test_scrapbook_indexer.py  test_scrapbook_search.py  test_scrapbook_util.py  test_server.py  test_themes.py  test_util.py  test_util_css.py  test_util_fs.py  test_util_html.py
tests/test_app_actions/: index.html  index.md  refresh.htm
tests/test_app_helpers/get_permission1/.wsb/: config.ini
tests/test_app_helpers/get_permission2/.wsb/: config.ini
tests/test_app_helpers/get_permission3/.wsb/: config.ini
tests/test_app_helpers/get_permission4/.wsb/: config.ini
tests/test_app_helpers/make_app1/.wsb/: config.ini
tests/test_config/.wsb/: config.ini
tests/test_config_load_constants/.config/wsbdir/: bookconfig.ini
tests/test_config_load_constants/.wsbdir/: bookconfig.ini
tests/test_config_load_repeated/.wsb/: config.ini
tests/test_scrapbook_cache/book01/.wsb/: config.ini
tests/test_scrapbook_cache/book01/data/: 20200421101254231.htz  20200917155205233.html
tests/test_scrapbook_cache/book01/tree/: fulltext.js  meta.js  toc.js
tests/test_util/: import_module_file.py
tests/test_util/get_html_charset/: bom_utf16le.html  bom_utf8.html  charset1.html  charset2.html  charset3.html  charset4.html  charset5.html  meta_charset_big5.xhtml  no_charset.xhtml
tests/test_util/get_meta_refresh/: refresh1.html  refresh5.html
tests/test_util/get_meta_refreshed_file/case02/: index.html
tests/test_util/iter_meta_refresh/: refresh3.html  refresh4.html  refresh7.html
tools/: build.py  compile.cmd  publish-pypi.cmd
tools/compile/: wsb.py
webscrapbook/: __init__.py  __main__.py  app.py  cli.py  locales.py  server.py  util.py
webscrapbook/_compat/: __init__.py  contextlib.py  secrets.py  time.py
webscrapbook/_polyfill/: argparse.py  mimetypes.py  zipfile.py
webscrapbook/lib/: secrets.py
webscrapbook/lib/patch/: bottle.py
webscrapbook/lib/shim/: secrets.py  time.py
webscrapbook/locales/: __init__.py
webscrapbook/locales/en/: messages.py
webscrapbook/locales/zh/: messages.py
webscrapbook/locales/zh_CN/: messages.py
webscrapbook/resources/: app.py  config.ini  config.md  mimetypes.md  serve.py  serve.wsgi  themes.md
webscrapbook/scrapbook/: __init__.py  book.py  cache.py  check.py  exporter.py  exporter1.py  host.py  importer.py  importer1.py  indexer.py  search.py  util.py
webscrapbook/scrapbook/common/: book.py  data.py  datafiles.py  files.py  generate_fulltext.py  tree.py  treefiles.py  util.py
webscrapbook/scrapbook/convert/: file2wsb.py  items.py  migrate.py  migrate0.py  sb2wsb.py  wsb2file.py  wsb2sb.py
webscrapbook/scrapbook/sort/: sort.py
webscrapbook/util/: __init__.py  css.py  fs.py  html.py  util.py  zipstream.py
(+54 files in other folders)
