[metadata]
name = webscrapbook
version = attr: webscrapbook.__version__
author = Danny Lin
author_email = danny0838@gmail.com
url = https://github.com/danny0838/PyWebScrapBook
description = A backend toolkit for management of WebScrapBook collection.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System
    Topic :: Internet :: WWW/HTTP :: Indexing/Search
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research

[options]
python_requires = ~=3.7
install_requires =
    flask >= 2.0.0
    werkzeug >= 2.0.1
    jinja2 >= 2.10.1
    lxml >= 4.0
    commonmark >= 0.8
packages = find:

[options.extras_require]
adhoc_ssl =
    cryptography

[options.packages.find]
include = webscrapbook*

[options.package_data]
webscrapbook =
    resources/*.*
    themes/default/static/*.*
    themes/default/templates/*.*
    themes/default/locales/*/*.py

[options.entry_points]
console_scripts =
    wsb = webscrapbook.cli:main
    # deprecated since 2.1.0
    webscrapbook = webscrapbook.cli:main
    # deprecated since 2.1.0
    wsbview = webscrapbook.cli:view

[flake8]
exclude =
    .git
    .tox
    .venv
    build
    dist
    setup.py

max-line-length = 160
ignore-names =
    setUp
    tearDown
    setUpClass
    tearDownClass
    setUpModule
    tearDownModule
    asyncSetUp
    asyncTearDown
    setUpTestData
    failureException
    longMessage
    maxDiff

# Flake8 Rules
# https://www.flake8rules.com/
extend-select =
    # E123: closing bracket does not match indentation of opening bracket's line
    E123

ignore =
    # W503: Line break occurred before a binary operator
    W503

per-file-ignores =
    webscrapbook/_polyfill/**: F401, F403, F405, Q000
    webscrapbook/themes/default/locales/*: P103, E501
    webscrapbook/util/__init__.py: F401, F403
    tests/test_cli.py: C408
    tests/test_locales/*: P103

[isort]
multi_line_output = 3
include_trailing_comma = true
extend_skip =
    # skip directories included by default
    # ref: https://pycqa.github.io/isort/docs/configuration/options.html
    #
    # .git
    # .tox
    # .venv
    # build
    # dist
    setup.py
